Demo in test automation meetup #2

--- a/atdd/log.html
+++ b/atdd/log.html
@@ -1717,28 +1717,28 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,7981],[],[[4,0,1,0,[],[0,162,7818,5],[[0,6,0,0,0,0,0,0,[1,162,2461],[[0,7,8,0,9,10,0,0,[1,163,2459],[],[[163,2,11]]]],[]],[0,12,0,0,0,0,0,0,[1,2624,87],[[0,13,8,0,14,15,0,0,[1,2624,87],[],[[2625,2,16]]]],[]],[0,17,0,0,0,0,0,0,[1,2711,67],[[0,13,8,0,14,18,0,0,[1,2712,66],[],[[2712,2,19]]]],[]],[0,20,0,0,0,0,0,0,[1,2779,101],[[0,21,8,0,22,23,0,0,[1,2779,101],[],[[2779,2,24]]]],[]],[0,25,0,0,0,0,0,0,[0,2880,5100],[[0,26,8,0,27,28,0,0,[0,2881,5099],[[0,29,8,0,30,0,0,0,[1,7942,36],[],[[7978,2,31]]]],[[7979,5,5]]]],[]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,2845],[],[[4,0,1,0,[],[1,100,1315],[[0,5,0,0,0,0,0,0,[1,102,1196],[[0,6,7,0,8,9,0,0,[1,102,1196],[],[[102,2,10]]]],[]],[0,11,0,0,0,12,0,0,[1,1299,62],[[0,13,7,0,14,15,0,0,[1,1299,61],[],[]]],[]],[2,16,7,0,17,0,0,0,[1,1361,53],[],[]]]],[18,0,1,0,[19],[1,1416,1427],[[0,20,0,0,0,0,0,0,[1,1418,1348],[[0,6,7,0,8,9,0,0,[1,1419,1243],[],[[1419,2,10]]],[0,21,7,0,22,23,0,0,[1,2663,103],[],[[2663,2,24]]]],[]],[0,11,0,0,0,25,0,0,[1,2767,13],[[0,13,7,0,14,15,0,0,[1,2767,13],[],[]]],[]],[2,16,7,0,17,0,0,0,[1,2781,62],[],[]]]]],[],[2,2,2,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Success","*/Users/somkiat/IdeaProjects/demo.grade/atdd/login_success.robot","*login_success.robot","*Login success","*Text 'สวัสดีจ๊ะ' did not appear in 5 seconds","*เปิดหน้า login","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*<a href=\"http://localhost:8080/demo/login.html\">http://localhost:8080/demo/login.html\x3c/a>","*Opening browser 'firefox' to base url '<a href=\"http://localhost:8080/demo/login.html\">http://localhost:8080/demo/login.html\x3c/a>'","*กรอก user somkiat","*Input Text","*<p>Types the given `text` into text field identified by `locator`.\x3c/p>","*user, somkiat","*Typing text 'somkiat' into text field 'user'","*กรอก pin 1234","*pin, 1234","*Typing text '1234' into text field 'pin'","*กดปุ่ม login","*Click Button","*<p>Clicks a button identified by `locator`.\x3c/p>","*login","*Clicking button 'login'.","*ต้องแสดงข้อความสวัสดีจ๊ะ","*Wait Until Page Contains","*<p>Waits until `text` appears on current page.\x3c/p>","*สวัสดีจ๊ะ","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into the log.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-1.png\"><img src=\"selenium-screenshot-1.png\" width=\"800px\">\x3c/a>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tennis","*/Users/somkiat/IdeaProjects/demo.grade/atdd/tennis.robot","*tennis.robot","*Start game เริ่มต้น","*ให้ผู้เล่นสองคนมีคะแนนเป็น 0 เท่ากัน","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*<a href=\"http://localhost:8080/demo/tennis\">http://localhost:8080/demo/tennis\x3c/a>","*Opening browser 'firefox' to base url '<a href=\"http://localhost:8080/demo/tennis\">http://localhost:8080/demo/tennis\x3c/a>'","*ขานคะแนนว่า","*Love Love","*Wait Until Page Contains","*<p>Waits until `text` appears on current page.\x3c/p>","*${คำขาน}","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Alice ได้คะแนนแรก","*dev","*Alice ได้แต้มคะแนน","*Click Button","*<p>Clicks a button identified by `locator`.\x3c/p>","*ALICE Win","*Clicking button 'ALICE Win'.","*Fifteen Love"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:08","fail":1,"id":"s1","label":"Login Success","name":"Login Success","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":2}],[{"elapsed":"00:00:01","fail":0,"label":"dev","pass":1}],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"Tennis","name":"Tennis","pass":2}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1465888660193;
+window.output["baseMillis"] = 1467036966984;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 7807;
+window.output["generatedMillis"] = 2016;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160614 14:17:48 GMT +07:00";
+window.output["generatedTimestamp"] = "20160627 21:16:09 GMT +07:00";
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
