--- a/atdd/report.html
+++ b/atdd/report.html
@@ -1557,25 +1557,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,7981],[],[[4,0,1,0,[],[0,162,7818,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,2845],[],[[4,0,1,0,[],[1,100,1315],[]],[5,0,1,0,[6],[1,1416,1427],[]]],[],[2,2,2,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login Success","*/Users/somkiat/IdeaProjects/demo.grade/atdd/login_success.robot","*login_success.robot","*Login success","*Text 'สวัสดีจ๊ะ' did not appear in 5 seconds"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tennis","*/Users/somkiat/IdeaProjects/demo.grade/atdd/tennis.robot","*tennis.robot","*Start game เริ่มต้น","*Alice ได้คะแนนแรก","*dev"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:08","fail":1,"id":"s1","label":"Login Success","name":"Login Success","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":2}],[{"elapsed":"00:00:01","fail":0,"label":"dev","pass":1}],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"Tennis","name":"Tennis","pass":2}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1465888660193;
+window.output["baseMillis"] = 1467036966984;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 7807;
+window.output["generatedMillis"] = 2016;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160614 14:17:48 GMT +07:00";
+window.output["generatedTimestamp"] = "20160627 21:16:09 GMT +07:00";
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
